# itmo

./: README.md
Android/: README.md
Android/WeatherCoroutines/: settings.gradle
DataAnalysis/lab1/: HW1 Fast Hist.ipynb  HW1 Interpolation.ipynb  HW1 preprocess.ipynb  README.md
DataAnalysis/lab3/: Lab-3.ipynb  README.md  hw3.ipynb
DataAnalysis/lab4/: Lab-4.ipynb  README.md  all_data_info.ipynb  hw4.ipynb
Kotlin/Makrobot/: README.md  build.gradle.kts  settings.gradle.kts
Kotlin/Mastermind/: README.md  build.gradle.kts
Kotlin/Talk/: README.md  build.gradle.kts  settings.gradle.kts
Kotlin/WikipediaStatistics/: README.md  build.gradle.kts
ML/: seismic-bumps.csv
MPP/dijkstra/: pom.xml
MPP/fine-grained-bank/: README.md  build.gradle.kts  settings.gradle.kts
MPP/lock-free-bank/: README.md  build.gradle.kts  settings.gradle.kts
MPP/mcs-lock/: build.gradle.kts
MPP/msqueue/: README.md  pom.xml
MPP/possible-executions-analysis/: solution.txt
MPP/stm-bank/: build.gradle.kts  settings.gradle.kts
c++/hw8/: CMakeLists.txt  README.md  main.cpp
c++/hw8/Budget/: Budget.cpp  Budget.h
c++/hw8/Department/: Department.cpp  Department.h  FundRaisingDepartment.cpp  FundRaisingDepartment.h  GrantDepartment.cpp  GrantDepartment.h  Trust.cpp  Trust.h
c++/hw8/Description/: Cause.cpp  Cause.h  Description.cpp  Description.h  Event.cpp  Event.h
c++/hw8/Employee/: CEO.cpp  Director.cpp  Director.h  Employee.cpp  Employee.h  Secretary.cpp  Secretary.h
c++/hw8/FundsBalance/: FundsBalance.cpp  FundsBalance.h
c++/hw8/Office/: Office.cpp  Office.h
(+260 files in other folders)
